name:                wai-middleware-rate-limit
version:             0.1.0.0
homepage:            https://github.com/channable/wai-middleware-rate-limit
synopsis:            Wai Middleware for rate-limiting HTTP requests
description:         Rate-limit HTTP requests either on IP or on session tokens, or both.
category:            Network
license:             MIT
license-file:        LICENSE
author:              Channable Developers
maintainer:          infrateam@channable.com
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

flag example
  description: enable example-app executable
  default:     False

source-repository head
  type:     git
  location: https://github.com/channable/wai-middleware-rate-limit

library
  default-language:    Haskell2010
  hs-source-dirs:      src
  exposed-modules:     Network.Wai.Middleware.RateLimit
  other-modules:
    Network.Wai.Middleware.RateLimit.Frequency
    Network.Wai.Middleware.RateLimit.IP
    Network.Wai.Middleware.RateLimit.LeakyBucket
    Network.Wai.Middleware.RateLimit.RateLimit
  build-depends:       aeson
                     , async
                     , base >=4.6 && <5
                     , bytestring
                     , hashable
                     , http-types
                     , ip
                     , jwt
                     , mtl
                     , network
                     , stm
                     , stm-containers
                     , text
                     , time
                     , wai
                     , wide-word

executable wai-middleware-rate-limit-example
  if flag(example)
    buildable: True
  else
    buildable: False
  default-language:    Haskell2010
  hs-source-dirs:      example
  main-is:             Main.hs
  build-depends:       async
                     , base >=4.6 && <5
                     , wai
                     , wai-app-static
                     , wai-extra
                     , wai-middleware-rate-limit
                     , warp
